FIX OVERFLOW

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
 
 .App{
     padding: 0.5rem 3.5rem;
-    /* overflow: hidden; */
-    overflow-y: hidden;
+    overflow: hidden;
+    
     color: var(--black);
 }
 
